@@ -1,6 +1,7 @@
 V6.0.3
 * Removed hard dependency for WorldEdit
 * Added possibility to disable integration to WorldEdit in config.yml
+* Temporary fix for players being disconneted if grinding is detected. ProtocolLib was using to mark the area / circle with small flames, but this does not work at the moment. The feature is disabled in config.yml. (protocollib.show_grinding_area_using_protocollib_temp: false)  
 V6.0.2
 * Default message_type values added. You can now decide where the "kill message","Money message" and "Head message" will be displayed. Possible Values are: Chat, ActionBar, BassBar, Title, Subtitle or None. None if you dont want any message.
 * Fix bug: Trident detected as fists - Ticket 420 (https://github.com/Rocologo/MobHunting/issues/420) 
